# AI-Strategy-Game

./: ARCHITECTURE.md  BUILD_SUMMARY.md  CHECKLIST.md  CMakeLists.txt  FILE_MANIFEST.md  GIT_STRATEGY.md  HOW_TO_PLAY.md  PROJECT_COMPLETE.txt  QUICK_START.md  README.md
Engine/: CMakeLists.txt
Engine/AI/: AISystem.cpp  AISystem.h  BehaviorTree.cpp  BehaviorTree.h  Blackboard.h  StateMachine.cpp  StateMachine.h
Engine/Core/: Engine.cpp  Engine.h
Engine/ECS/: Component.h  ComponentRegistry.cpp  ComponentRegistry.h  Entity.cpp  Entity.h  System.cpp  System.h
Engine/Math/: Vector2.cpp  Vector2.h  Vector3.h
Engine/Pathfinding/: Pathfinder.cpp  Pathfinder.h
Engine/Systems/: CombatSystem.cpp  CombatSystem.h  EventSystem.cpp  EventSystem.h  InputSystem.cpp  InputSystem.h  MovementSystem.cpp  MovementSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  ResourceSystem.cpp  ResourceSystem.h  SelectionSystem.cpp  SelectionSystem.h  SoundSystem.cpp  SoundSystem.h
Game/: CMakeLists.txt  GameManager.cpp  GameManager.h  main.cpp
Game/Buildings/: Base.cpp  Base.h  Building.cpp  Building.h  ResourceMine.cpp  ResourceMine.h  Turret.cpp  Turret.h
Game/Units/: Scout.cpp  Scout.h  Soldier.cpp  Soldier.h  Tank.cpp  Tank.h  Unit.cpp  Unit.h  Worker.cpp  Worker.h
